# darknet

./: .gitignore  CMakeLists.txt  tomek-rev-eng.txt
include/: darknet.h
src/: region_layer.c
